<resources>
    <string name="app_name">My Application</string>
    <string name="strike">Strike:</string>
    <string name="ball">Ball:</string>
    <string name="strikeText">Strike</string>
    <string name="ballText">Ball</string>
    <string name="strikeButton">Strike</string>
    <string name="ballButton">Ball</string>
    <string name="totalOuts"> Total Outs:</string>
    <string name="zero"> 0 </string>
    <string name="Menu">  Menu </string>
    <string name="About"> About </string>
    <string name="Reset"> Reset </string>
    <string name="Information1"> Umpire Buddy v2 by Jordyn Adrales</string>
    <string name="Information2">This app was made as part of a Software Engineering Capstone course. This app is written in Java and made with Android Studio! All assets, including the app icon, were also made by hand as part of the development process.</string>
</resources>
