<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/strike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="161dp"
            android:layout_marginLeft="161dp"
            android:layout_marginTop="274dp"
            android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp"
            android:layout_marginBottom="409dp"
            android:text="@string/strikeText" />

        <TextView
            android:id="@+id/strikeCount"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="242dp"
            android:layout_marginLeft="242dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="118dp"
            android:layout_marginRight="118dp"
            android:layout_marginBottom="544dp"
            android:gravity="start"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <TextView
            android:id="@+id/strikeText"
            android:layout_width="139dp"
            android:layout_height="54dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="119dp"
            android:layout_marginEnd="182dp"
            android:layout_marginRight="182dp"
            android:layout_marginBottom="558dp"
            android:gravity="end"
            android:text="@string/strike"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <TextView
            android:id="@+id/ballCount"
            android:layout_width="31dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="230dp"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="198dp"
            android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp"
            android:layout_marginBottom="483dp"
            android:gravity="start"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <TextView
            android:id="@+id/ballText"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="144dp"
            android:layout_marginLeft="144dp"
            android:layout_marginTop="197dp"
            android:layout_marginEnd="197dp"
            android:layout_marginRight="197dp"
            android:layout_marginBottom="483dp"
            android:gravity="end"
            android:text="@string/ball"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <TextView
            android:id="@+id/outCount"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="251dp"
            android:layout_marginLeft="251dp"
            android:layout_marginTop="420dp"
            android:layout_marginEnd="109dp"
            android:layout_marginRight="109dp"
            android:layout_marginBottom="244dp"
            android:gravity="start"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="visible" />

        <Button
            android:id="@+id/ball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="163dp"
            android:layout_marginLeft="163dp"
            android:layout_marginTop="342dp"
            android:layout_marginEnd="160dp"
            android:layout_marginRight="160dp"
            android:layout_marginBottom="341dp"
            android:text="@string/ballText" />

        <TextView
            android:id="@+id/totalOuts"
            android:layout_width="252dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="62dp"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="419dp"
            android:layout_marginEnd="96dp"
            android:layout_marginRight="96dp"
            android:layout_marginBottom="248dp"
            android:gravity="center_horizontal"
            android:text="@string/totalOuts"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="visible" />

    </RelativeLayout>

    </RelativeLayout>